--- a/app/src/main/res/layout-w720dp/activity_settings.xml
+++ b/app/src/main/res/layout-w720dp/activity_settings.xml
@@ -21,7 +21,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_marginRight="10dp">
+        android:layout_marginRight="10dp"
+        android:layout_marginEnd="10dp">
 
     <ImageView
         android:id="@+id/profile_picture_settings"
@@ -39,7 +40,7 @@
             android:layout_gravity="center"
             android:layout_marginTop="30dp"
             android:textSize="22sp"
-            android:text="Your name"/>
+            android:text="@string/your_name_setting"/>
 
     </LinearLayout>
 
@@ -63,7 +64,7 @@
             android:textSize="20sp"
             android:layout_marginEnd="70dp"
             android:layout_marginTop="50dp"
-            android:text="Change user name"
+            android:text="@string/change_username_button"
             android:textAllCaps="false"/>
 
     </LinearLayout>
