--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -22,7 +22,8 @@
         android:layout_height="wrap_content"
         android:padding="16dp"
         android:orientation="vertical"
-        android:layout_marginRight="10dp">
+        android:layout_marginRight="10dp"
+        android:layout_marginEnd="10dp">
 
     <ImageView
         android:id="@+id/profile_picture_settings"
@@ -40,7 +41,7 @@
             android:layout_gravity="center"
             android:layout_marginTop="30dp"
             android:textSize="20sp"
-            android:text="Your name"/>
+            android:text="@string/your_name_setting"/>
 
     </LinearLayout>
 
@@ -62,7 +63,7 @@
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
             android:layout_marginTop="50dp"
-            android:text="Change user name"
+            android:text="@string/change_username_button"
             android:textAllCaps="false"/>
 
     </LinearLayout>
