--- a/app/src/main/res/layout/dialog_change_user_name.xml
+++ b/app/src/main/res/layout/dialog_change_user_name.xml
@@ -23,7 +23,7 @@
             android:singleLine="true"
             android:maxLines="1"
             android:inputType="textCapSentences"
-            android:hint="Last name"/>
+            android:hint="@string/dialog_last_name"/>
     </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
@@ -43,7 +43,7 @@
                 android:inputType="textCapSentences"
                 android:singleLine="true"
                 android:maxLines="1"
-                android:hint="First name"/>
+                android:hint="@string/dialog_first_name"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 </LinearLayout>
