--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -20,6 +20,8 @@
         android:layout_marginBottom="16dp"
         android:layout_marginRight="16dp"
         android:clickable="true"
-        android:src="@drawable/plus"/>
+        android:src="@drawable/plus"
+        android:focusable="true"
+        android:layout_marginEnd="16dp" />
 
 </FrameLayout>
