--- a/app/src/main/res/layout/interests_checkboxes.xml
+++ b/app/src/main/res/layout/interests_checkboxes.xml
@@ -41,7 +41,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:buttonTint="@color/blue_grey"
-            android:text="School" />
+            android:text="@string/school" />
 
         <CheckBox
             android:id="@+id/checkboxMarketPlace"
@@ -49,7 +49,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:buttonTint="@color/blue_grey"
-            android:text="Market place" />
+            android:text="@string/market_place" />
 
     </LinearLayout>
 
@@ -63,7 +63,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:buttonTint="@color/blue_grey"
-            android:text="Park" />
+            android:text="@string/park" />
 
         <CheckBox
             android:id="@+id/checkboxHospital"
@@ -71,7 +71,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:buttonTint="@color/blue_grey"
-            android:text="Hospital" />
+            android:text="@string/hospital" />
 
     </LinearLayout>
 
@@ -85,7 +85,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:buttonTint="@color/blue_grey"
-            android:text="Cinema" />
+            android:text="@string/cinema" />
 
         <CheckBox
             android:id="@+id/checkboxTheater"
@@ -93,7 +93,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:buttonTint="@color/blue_grey"
-            android:text="Theater" />
+            android:text="@string/theater" />
 
     </LinearLayout>
 
