--- a/app/src/main/res/layout/main_activity_nav_header.xml
+++ b/app/src/main/res/layout/main_activity_nav_header.xml
@@ -18,7 +18,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Real Estate Manager"
+        android:text="@string/app_name_nav_header"
         android:layout_marginTop="30dp"
         android:textSize="20sp"
         android:textColor="@android:color/white"/>
