--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -76,7 +76,14 @@
             <androidx.viewpager.widget.ViewPager
                 android:id="@+id/viewpager"
                 android:layout_width="match_parent"
-                android:layout_height="800dp"/>
+                android:layout_height="700dp"/>
+
+            <!--<com.example.realestatemanager.CustomViewPager
+                android:id="@+id/custom_view_pager"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            </com.example.realestatemanager.CustomViewPager>-->
 
         </LinearLayout>
 
