--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -11,12 +11,11 @@
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/main.appbar"
         android:layout_width="match_parent"
-        android:layout_height="330dp"
+        android:layout_height="wrap_content"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        android:fitsSystemWindows="true"
         >
 
-        <com.google.android.material.appbar.CollapsingToolbarLayout
+        <!--<com.google.android.material.appbar.CollapsingToolbarLayout
             android:id="@+id/main.collapsing"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -25,69 +24,59 @@
             app:contentScrim="?attr/colorPrimary"
             app:expandedTitleMarginStart="48dp"
             app:expandedTitleMarginEnd="64dp"
-            >
+            >-->
 
-            <RelativeLayout
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="300dp"
+                android:id="@+id/image_view_detail"/>
 
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:id="@+id/image_view_detail"/>
+            <androidx.recyclerview.widget.RecyclerView
+                app:layout_collapseMode="parallax"
 
-                <androidx.recyclerview.widget.RecyclerView
-                    app:layout_collapseMode="parallax"
-                    app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
-                    android:id="@+id/recycler_view_detail_photos"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                android:id="@+id/recycler_view_detail_photos"
+                android:layout_width="match_parent"
+                android:layout_height="300dp">
 
-                </androidx.recyclerview.widget.RecyclerView>
-            </RelativeLayout>
+            </androidx.recyclerview.widget.RecyclerView>
+        </RelativeLayout>
 
-        </com.google.android.material.appbar.CollapsingToolbarLayout>
+        <!--</com.google.android.material.appbar.CollapsingToolbarLayout>-->
+
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/main_tabs"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/blue_grey"
+            app:tabIndicatorColor="@android:color/white"
+            app:tabIndicatorHeight="4dp"
+            app:tabTextColor="@android:color/white"
+            app:tabSelectedTextColor="@android:color/white"/>
+
+
+
     </com.google.android.material.appbar.AppBarLayout>
 
+    <!--<com.google.android.material.tabs.TabLayout
+        android:id="@+id/main_tabs"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/blue_grey"
+        app:tabIndicatorColor="@android:color/white"
+        app:tabIndicatorHeight="4dp"
+        app:tabTextColor="@android:color/white"
+        app:tabSelectedTextColor="@android:color/white"/>-->
 
-
-    <androidx.core.widget.NestedScrollView
-        android:id="@+id/nested_scroll_view"
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
-        <LinearLayout
-            android:id="@+id/layout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <com.google.android.material.tabs.TabLayout
-                android:id="@+id/main_tabs"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/blue_grey"
-                app:tabIndicatorColor="@android:color/white"
-                app:tabIndicatorHeight="4dp"
-                app:tabTextColor="@android:color/white"
-                app:tabSelectedTextColor="@android:color/white"/>
-
-            <androidx.viewpager.widget.ViewPager
-                android:id="@+id/viewpager"
-                android:layout_width="match_parent"
-                android:layout_height="700dp"/>
-
-            <!--<com.example.realestatemanager.CustomViewPager
-                android:id="@+id/custom_view_pager"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-            </com.example.realestatemanager.CustomViewPager>-->
-
-        </LinearLayout>
-
-    </androidx.core.widget.NestedScrollView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/edit_floating_action_button_detail_fragment"
@@ -95,7 +84,7 @@
         android:layout_width="wrap_content"
         android:src="@drawable/ic_edit_white"
         android:clickable="true"
-        app:layout_anchor="@id/nested_scroll_view"
+        app:layout_anchor="@id/viewpager"
         app:layout_anchorGravity="bottom|end"
         android:layout_marginBottom="16dp"
         android:layout_marginRight="16dp"
