- clean some code

--- a/app/src/main/res/layout-w720dp-land/activity_add_form.xml
+++ b/app/src/main/res/layout-w720dp-land/activity_add_form.xml
@@ -9,7 +9,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".activities.AddFormActivity">
+    tools:context=".controller.activities.AddFormActivity">
 
     <include
         layout="@layout/toolbar"
