--- a/app/src/main/res/layout/activity_add_form.xml
+++ b/app/src/main/res/layout/activity_add_form.xml
@@ -9,7 +9,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".activities.AddFormActivity">
+    tools:context=".controller.activities.AddFormActivity">
 
     <include
         layout="@layout/toolbar"
@@ -183,6 +183,7 @@
             android:layout_width="match_parent"
             android:layout_height="45dp"
             android:layout_marginLeft="30dp"
+            android:layout_marginTop="4dp"
             app:boxStrokeColor="@color/blue"
             app:errorEnabled="true"
             android:layout_marginStart="30dp">
@@ -204,6 +205,7 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
             android:layout_width="match_parent"
             android:layout_height="45dp"
+            android:layout_marginTop="4dp"
             android:layout_marginLeft="30dp"
             app:boxStrokeColor="@color/blue"
             app:errorEnabled="true"
@@ -329,6 +331,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="45dp"
                 android:layout_marginLeft="30dp"
+                android:layout_marginTop="4dp"
                 app:boxStrokeColor="@color/blue"
                 app:errorEnabled="true"
                 android:layout_marginStart="30dp">
@@ -358,6 +361,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="45dp"
                 android:layout_marginLeft="30dp"
+                android:layout_marginTop="4dp"
                 android:layout_weight="50"
                 app:boxStrokeColor="@color/blue"
                 app:errorEnabled="true"
@@ -381,6 +385,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="45dp"
                 android:layout_marginLeft="10dp"
+                android:layout_marginTop="4dp"
                 android:layout_weight="50"
                 app:boxStrokeColor="@color/blue"
                 app:errorEnabled="true"
@@ -410,6 +415,7 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                 android:layout_width="match_parent"
                 android:layout_height="45dp"
+                android:layout_marginTop="4dp"
                 android:layout_marginLeft="30dp"
                 app:boxStrokeColor="@color/blue"
                 app:errorEnabled="true"
