--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:id="@+id/drawer_layout"
     tools:openDrawer="start"
-    tools:context="com.example.realestatemanager.MainActivity">
+    tools:context="com.example.realestatemanager.controller.activities.MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
