--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -4,5 +4,5 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/map_fragment_map_activity"
-    tools:context=".activities.MapActivity"
+    tools:context=".controller.activities.MapActivity"
     android:name="com.google.android.gms.maps.SupportMapFragment" />
